@@ -21,22 +21,31 @@
  */
 package com.github._1c_syntax.bsl.languageserver.providers;
 
+import com.github._1c_syntax.bsl.languageserver.ClientCapabilitiesHolder;
 import com.github._1c_syntax.bsl.languageserver.context.AbstractServerContextAwareTest;
 import com.github._1c_syntax.bsl.languageserver.util.CleanupContextBeforeClassAndAfterClass;
 import com.github._1c_syntax.bsl.languageserver.util.TestUtils;
 import com.github._1c_syntax.bsl.languageserver.utils.Ranges;
 import com.github._1c_syntax.bsl.types.ModuleType;
+import org.eclipse.lsp4j.ClientCapabilities;
+import org.eclipse.lsp4j.DefinitionCapabilities;
 import org.eclipse.lsp4j.DefinitionParams;
+import org.eclipse.lsp4j.Location;
+import org.eclipse.lsp4j.LocationLink;
 import org.eclipse.lsp4j.Position;
+import org.eclipse.lsp4j.TextDocumentClientCapabilities;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 
 import java.nio.file.Path;
+import java.util.Optional;
 
 import static com.github._1c_syntax.bsl.languageserver.util.TestUtils.PATH_TO_METADATA;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.when;
 
 @SpringBootTest
 @CleanupContextBeforeClassAndAfterClass
@@ -45,12 +54,33 @@ class DefinitionProviderTest extends AbstractServerContextAwareTest {
   @Autowired
   private DefinitionProvider definitionProvider;
 
+  @MockitoSpyBean
+  private ClientCapabilitiesHolder clientCapabilitiesHolder;
+
   private static final String PATH_TO_FILE = "./src/test/resources/providers/definition.bsl";
   private static final String PATH_TO_COMMON_MODULE_FILE = "./src/test/resources/providers/definitionCommonModule.bsl";
 
   @BeforeEach
   void prepareServerContext() {
     initServerContextOnce(Path.of(PATH_TO_METADATA));
+    // По умолчанию заявляем клиентскую поддержку linkSupport, чтобы навигационные тесты
+    // получали LocationLink[]; отдельный тест проверяет понижение до Location[].
+    setClientLinkSupport(true);
+  }
+
+  /**
+   * Настраивает заявленную клиентом возможность {@code textDocument.definition.linkSupport}
+   * и пересчитывает её кэш в провайдере через {@code handleInitializeEvent}.
+   *
+   * @param linkSupport {@code true}, если клиент поддерживает {@link LocationLink}
+   */
+  private void setClientLinkSupport(boolean linkSupport) {
+    var capabilities = new ClientCapabilities();
+    var textDocumentCapabilities = new TextDocumentClientCapabilities();
+    textDocumentCapabilities.setDefinition(new DefinitionCapabilities(false, linkSupport));
+    capabilities.setTextDocument(textDocumentCapabilities);
+    when(clientCapabilitiesHolder.getCapabilities()).thenReturn(Optional.of(capabilities));
+    definitionProvider.handleInitializeEvent();
   }
 
   @Test
@@ -64,7 +94,8 @@ class DefinitionProviderTest extends AbstractServerContextAwareTest {
     var definitions = definitionProvider.getDefinition(documentContext, params);
 
     // then
-    assertThat(definitions).isEmpty();
+    assertThat(definitions.isRight()).isTrue();
+    assertThat(definitions.getRight()).isEmpty();
   }
 
   @Test
@@ -79,9 +110,10 @@ class DefinitionProviderTest extends AbstractServerContextAwareTest {
     var definitions = definitionProvider.getDefinition(documentContext, params);
 
     // then
-    assertThat(definitions).hasSize(1);
+    assertThat(definitions.isRight()).isTrue();
+    assertThat(definitions.getRight()).hasSize(1);
 
-    var definition = definitions.getFirst();
+    var definition = definitions.getRight().get(0);
 
     assertThat(definition.getTargetUri()).isEqualTo(documentContext.getUri().toString());
     assertThat(definition.getTargetSelectionRange()).isEqualTo(methodSymbol.getSelectionRange());
@@ -102,9 +134,10 @@ class DefinitionProviderTest extends AbstractServerContextAwareTest {
     var definitions = definitionProvider.getDefinition(documentContext, params);
 
     // then
-    assertThat(definitions).hasSize(1);
+    assertThat(definitions.isRight()).isTrue();
+    assertThat(definitions.getRight()).hasSize(1);
 
-    var definition = definitions.getFirst();
+    var definition = definitions.getRight().get(0);
 
     assertThat(definition.getTargetUri()).isEqualTo(managerModule.getUri().toString());
     assertThat(definition.getTargetSelectionRange()).isEqualTo(methodSymbol.getSelectionRange());
@@ -128,14 +161,60 @@ class DefinitionProviderTest extends AbstractServerContextAwareTest {
     var definitions = definitionProvider.getDefinition(documentContext, params);
 
     // then
-    assertThat(definitions).hasSize(1);
+    assertThat(definitions.isRight()).isTrue();
+    assertThat(definitions.getRight()).hasSize(1);
 
-    var definition = definitions.getFirst();
+    var definition = definitions.getRight().get(0);
 
     assertThat(definition.getTargetUri()).isEqualTo(commonModule.getUri().toString());
     assertThat(definition.getTargetSelectionRange()).isEqualTo(moduleSymbol.getSelectionRange());
     assertThat(definition.getTargetRange()).isEqualTo(moduleSymbol.getRange());
     // "ПервыйОбщийМодуль" spans 17 characters
     assertThat(definition.getOriginSelectionRange()).isEqualTo(Ranges.create(1, 0, 17));
+  }
+
+  @Test
+  void definitionReturnsLocationLinksWhenClientSupportsLinkSupport() {
+    // given - клиент, заявивший textDocument.definition.linkSupport
+    setClientLinkSupport(true);
+    var documentContext = TestUtils.getDocumentContextFromFile(PATH_TO_FILE);
+    var methodSymbol = documentContext.getSymbolTree().getMethodSymbol("ИмяФункции").orElseThrow();
+
+    var params = new DefinitionParams();
+    params.setPosition(new Position(4, 9));
+
+    // when
+    var definitions = definitionProvider.getDefinition(documentContext, params);
+
+    // then - клиент с поддержкой связей получает LocationLink[]
+    assertThat(definitions.isRight()).isTrue();
+    assertThat(definitions.getRight()).hasSize(1);
+
+    var locationLink = definitions.getRight().get(0);
+    assertThat(locationLink).isInstanceOf(LocationLink.class);
+    assertThat(locationLink.getTargetUri()).isEqualTo(documentContext.getUri().toString());
+    assertThat(locationLink.getTargetSelectionRange()).isEqualTo(methodSymbol.getSelectionRange());
+    assertThat(locationLink.getTargetRange()).isEqualTo(methodSymbol.getRange());
+    assertThat(locationLink.getOriginSelectionRange()).isEqualTo(Ranges.create(4, 0, 10));
+  }
+
+  @Test
+  void definitionDowngradesToLocationsWhenClientLacksLinkSupport() {
+    // given - клиент без textDocument.definition.linkSupport
+    setClientLinkSupport(false);
+    var documentContext = TestUtils.getDocumentContextFromFile(PATH_TO_FILE);
+    var methodSymbol = documentContext.getSymbolTree().getMethodSymbol("ИмяФункции").orElseThrow();
+
+    var params = new DefinitionParams();
+    params.setPosition(new Position(4, 9));
+
+    // when
+    var definitions = definitionProvider.getDefinition(documentContext, params);
+
+    // then - результат понижается до Location[] с targetUri и targetSelectionRange
+    assertThat(definitions.isLeft()).isTrue();
+    assertThat(definitions.getLeft()).hasSize(1);
+    assertThat(definitions.getLeft().get(0))
+      .isEqualTo(new Location(documentContext.getUri().toString(), methodSymbol.getSelectionRange()));
   }
 }
